tests/rustdoc-ui/issues/ice-placeholder-type-alias-106226.stderr
error[E0121]: the placeholder `_` is not allowed within types on item signatures for type aliases
  --> $DIR/ice-placeholder-type-alias-106226.rs:2:11
   |
LL | type F = [_; ()];
   |           ^ not allowed in type signatures

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0121`.
