tests/rustdoc-ui/issues/ice-placeholder-type-alias-106226.rs
// This is a regression test for <https://github.com/rust-lang/rust/issues/106226>.
type F = [_; ()];
//~^ ERROR
